--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -6,15 +6,10 @@ $second-color: #c57996;
 $third-color: #dfdde6;
 $fourth-color: #5a446f;
 
-head {
-    margin: 0;
-    height: 100%;
-}
-
 body {
     font: 100% $font-stack;
     color: $third-color;
-    margin: 0;
+    // margin: 0;
     height: 100%;
     background-color: $background;
     display: flex;
