--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,6 @@
-head {
-  margin: 0;
-  height: 100%;
-}
-
 body {
   font: 100% Helvetica, sans-serif;
   color: #dfdde6;
-  margin: 0;
   height: 100%;
   background-color: #000000;
   display: flex;
@@ -18,7 +12,7 @@ canvas {
   width: 100%;
   height: 100%;
   display: block;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: -9999;
@@ -26,8 +20,14 @@ canvas {
   image-rendering: optimizespeed;
 }
 
+.container {
+  border-radius: 10px;
+  padding: 25px 25px;
+  background: rgba(0, 0, 0, 0.75);
+}
+
 picture img {
-  width: 40%;
+  width: 90px;
 }
 
 nav ul {
@@ -57,31 +57,27 @@ post img {
   text-align: left;
 }
 post a {
-  color: inherit;
-  text-align: right;
-  float: right;
-}
-
-resources ul {
-  margin: 0;
   padding: 5px;
-  list-style: none;
-}
-
-resource img {
-  width: 75px;
-  height: 75px;
-  text-align: left;
-}
-resource a {
   color: inherit;
   text-align: right;
   float: right;
   text-decoration: none;
 }
 
+resources ul {
+  list-style-image: url("../assets/service.gif");
+}
+resources a {
+  color: inherit;
+  text-decoration: none;
+}
+
 about ul {
   list-style-image: url("../assets/blobkitty.gif");
+}
+
+thread p {
+  color: inherit;
 }
 
 footer ul {
