--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,6 +16,7 @@ canvas {
     border-radius: 10px;
     padding: 25px 25px;
     background: rgba(0, 0, 0, .75);
+    width: 50%;
 }
 
 picture {
@@ -53,25 +54,24 @@ post {
     img {
         width: 75px;
         height: 75px;
-        text-align: left;
+        float: inline-start;
     }
     a {
-	padding: 5px;
+	    padding: 5px;
         color: inherit;
-        text-align: right;
+        text-align: justify;
         float: right;
-	text-decoration: none;
-    text-align: justify;
+	    text-decoration: none;
     }
 }
 
 resources {
     ul {
-	list-style-image: url('../assets/service.gif');
+	    list-style-image: url('../assets/service.gif');
     }
     a {
     	color: inherit;
-	text-decoration: none;
+	    text-decoration: none;
     }
 }
 
@@ -83,7 +83,8 @@ about {
 
 thread {
     p {
-	color: inherit;
+	    color: inherit;
+        text-align: justify;
     }
 }
 
