--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -1,4 +1,5 @@
-$font-stack: Helvetica, sans-serif;
+$font-stack: Helvetica,
+sans-serif;
 // $background: #343464;
 $background: #000000;
 $first-color: #6c4c74;
