--- a/styles/style.css
+++ b/styles/style.css
@@ -55,12 +55,12 @@ posts ul {
 post img {
   width: 75px;
   height: 75px;
-  float: inline-start;
+  text-align: left;
 }
 post a {
   padding: 5px;
   color: inherit;
-  text-align: justify;
+  text-align: right;
   float: right;
   text-decoration: none;
 }
@@ -77,9 +77,29 @@ about ul {
   list-style-image: url("../assets/blobkitty.gif");
 }
 
+resume row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+resume column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+
+thread h1 {
+  color: inherit;
+  text-align: justify;
+}
 thread p {
   color: inherit;
   text-align: justify;
+}
+thread a {
+  color: inherit;
 }
 
 footer ul {
